@@ -1,3 +1,9 @@
+2019-12-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/init.R (.onLoad): Cache isWindows state
+	(.isWindows): Return cached value
+	* R/digest.R (digest): Use cached value accessor
+
 2019-11-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/tinytest/test_new_matrix_behaviour.R: Split off tests affected
